ajout commentaire et rendu le code plus propore