@@ -8,16 +8,27 @@ import java.util.List;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 
-
-
+/**
+ * Client SMTP pour l'envoi d'emails
+ * Gère la connexion au serveur SMTP et l'envoi des messages
+ */
 public class SmtpClient {
     private String smtpServer;
     private int port;
 
+    /**
+     * Constructeur du client SMTP
+     * @param smtpServer Adresse du serveur SMTP
+     * @param port Port du serveur SMTP
+     */
     public SmtpClient(String smtpServer, int port) {
         this.smtpServer = smtpServer;
         this.port = port;
     }
+    /**
+     * Récupère la date actuelle au format dd.MM.yyyy
+     * @return La date formatée en chaîne de caractères
+     */
     private String getActualDate()
     {
         // Obtenir la date actuelle
@@ -30,6 +41,13 @@ public class SmtpClient {
         return currentDate.format(formatter);
     }
 
+    /**
+     * Établit la connexion avec le serveur SMTP et envoie les commandes initiales
+     * @param in Buffer de lecture des réponses du serveur
+     * @param out Buffer d'écriture des commandes au serveur
+     * @param sender Adresse email de l'expéditeur
+     * @param receiver Liste des adresses email des destinataires
+     */
     private void connexionServeurSMTP(BufferedReader in,BufferedWriter out, String sender, List<String> receiver)
     {
         try
@@ -57,6 +75,13 @@ public class SmtpClient {
 
     }
 
+    /**
+     * Envoie un email via le protocole SMTP
+     * @param sender Adresse email de l'expéditeur
+     * @param recipients Liste des adresses email des destinataires
+     * @param message Liste contenant le sujet (premier élément) et le corps (dernier élément) du message
+     * @throws IOException En cas d'erreur lors de la communication avec le serveur
+     */
     public void sendEmail(String sender, List<String> recipients, List<String> message) throws IOException {
         //message.getFirst -> sujet
         //message.getLast -> corp
@@ -83,11 +108,11 @@ public class SmtpClient {
                 out.flush();
                 out.write("Content-Type: text/plain; charset=UTF-8\r\n");
                 out.flush();
-                out.write("Subject:" + message.getFirst() + "\r\n");
+                out.write("Subject:" + message.get(0) + "\r\n");
                 out.flush();
                 out.write("\n");
                 out.flush();
-                out.write(message.getLast() + "\n");
+                out.write(message.get(message.size()-1) + "\n");
                 out.flush();
                 out.write(" \n");
                 out.flush();
@@ -104,4 +129,3 @@ public class SmtpClient {
         }
     }
 }
-
